syntax = "proto3";

package ratelimiter;

service RateLimiter {
  //TODO: Check if user is allowed to perform an action
  rcp Check(LimitRequest) returns (LimitResponse);

  // TODO Stream analytics data to the Analyst Service
 rcp StreamAnalytics(stream AnalyticsEvent) returns (AnalyticsSummary);
}

message LimitRequest {
  string user_id = 1;
  string key = 2;
}

message LimitResponse {
  bool allowed = 1;
  int32 remaining = 2;
}


message AnalyticsEvent {
  string user_id = 1;
  bool allowed = 2;
  int64 timestamp = 3;
}

message AnalyticsSummary {
  uint64 total_processed = 1;
}